fixed vertical alignment of flag

--- a/scss/react-flags-select.scss
+++ b/scss/react-flags-select.scss
@@ -98,7 +98,7 @@ $text-color: #4d4d4d;
       width: 1.3em;
       height: 1.3em;
       position: relative;
-      top: 0.3em;
+    
     }
   }
 
